// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button rendering Basic should match the snapshot 1`] = `
<div>
  <button
    class="ButtonUnstyled-root mc-c-iiEeHJ mc-c-iiEeHJ-cVBYSe-btnType-primary mc-c-iiEeHJ-fcHofs-size-md"
    role="button"
    type="button"
  >
    <span>
      42 is the meaning of life
    </span>
  </button>
</div>
`;

exports[`Button rendering IconOnly should match the snapshot 1`] = `
<div>
  <button
    aria-label="Add Record"
    class="ButtonUnstyled-root mc-c-iiEeHJ mc-c-iiEeHJ-TfyyP-btnType-secondary mc-c-iiEeHJ-ckylrR-size-lg mc-c-iiEeHJ-kaXTQH-circle-lg mc-c-iiEeHJ-eqqWRo-hasIcon-true"
    role="button"
    type="button"
  >
    <i
      data-testid="mock-icon-Add"
    />
  </button>
</div>
`;

exports[`Button rendering Loading should match the snapshot 1`] = `
<div>
  <button
    class="ButtonUnstyled-root Mui-disabled mc-c-iiEeHJ mc-c-iiEeHJ-TfyyP-btnType-secondary mc-c-iiEeHJ-fcHofs-size-md mc-c-iiEeHJ-gvlAwB-loading-true mc-c-iiEeHJ-eqqWRo-hasIcon-true"
    disabled=""
    role="button"
    type="button"
  >
    <svg
      class="mc-c-hsxsfB mc-c-hsxsfB-iixNcA-size-md mc-c-hsxsfB-llIIr-color-dark"
      fill="none"
      height="20"
      style="opacity: 1;"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="10"
        cy="10"
        opacity="0.05"
        r="9"
        stroke="black"
        stroke-linecap="round"
        stroke-width="2"
      />
      <circle
        cx="10"
        cy="10"
        opacity="0.1"
        r="9"
        stroke="black"
        stroke-dasharray="1000"
        stroke-linecap="round"
        stroke-width="2"
      />
      <circle
        cx="10"
        cy="10"
        opacity="0.2"
        r="9"
        stroke="black"
        stroke-dasharray="1000"
        stroke-linecap="round"
        stroke-width="2"
      />
      <circle
        cx="10"
        cy="10"
        opacity="1.0"
        r="9"
        stroke="black"
        stroke-dasharray="1000"
        stroke-linecap="round"
        stroke-width="2"
      />
    </svg>
    <span>
      Loading...
    </span>
  </button>
</div>
`;

exports[`Button rendering LoadingAfter5Seconds should match the snapshot 1`] = `
<div>
  <button
    class="ButtonUnstyled-root mc-c-iiEeHJ mc-c-iiEeHJ-TfyyP-btnType-secondary mc-c-iiEeHJ-fcHofs-size-md"
    role="button"
    type="button"
  >
    <span>
      Loading after 5 seconds...
    </span>
  </button>
</div>
`;

exports[`Button rendering WithEndIcon should match the snapshot 1`] = `
<div>
  <button
    class="ButtonUnstyled-root mc-c-iiEeHJ mc-c-iiEeHJ-cVBYSe-btnType-primary mc-c-iiEeHJ-fcHofs-size-md mc-c-iiEeHJ-eqqWRo-hasIcon-true"
    role="button"
    type="button"
  >
    <span>
      Get started
    </span>
    <i
      data-testid="mock-icon-ArrowRight"
    />
  </button>
</div>
`;

exports[`Button rendering WithStartIcon should match the snapshot 1`] = `
<div>
  <button
    class="ButtonUnstyled-root mc-c-iiEeHJ mc-c-iiEeHJ-bNXcQJ-btnType-danger mc-c-iiEeHJ-fcHofs-size-md mc-c-iiEeHJ-eqqWRo-hasIcon-true"
    role="button"
    type="button"
  >
    <i
      data-testid="mock-icon-Delete"
    />
    <span>
      Confirm to 
      <strong>
        delete
      </strong>
    </span>
  </button>
</div>
`;

exports[`Button rendering should match the snapshot as a block button 1`] = `
<div>
  <button
    class="ButtonUnstyled-root mc-c-iiEeHJ mc-c-iiEeHJ-cVBYSe-btnType-primary mc-c-iiEeHJ-fcHofs-size-md mc-c-iiEeHJ-iqjHSX-block-true"
    role="button"
    type="button"
  >
    <span>
      42 is the meaning of life
    </span>
  </button>
</div>
`;

exports[`Button rendering should match the snapshot by size "lg" 1`] = `
<div>
  <button
    class="ButtonUnstyled-root mc-c-iiEeHJ mc-c-iiEeHJ-cVBYSe-btnType-primary mc-c-iiEeHJ-ckylrR-size-lg"
    role="button"
    type="button"
  >
    <span>
      42 is the meaning of life
    </span>
  </button>
</div>
`;

exports[`Button rendering should match the snapshot by size "md" 1`] = `
<div>
  <button
    class="ButtonUnstyled-root mc-c-iiEeHJ mc-c-iiEeHJ-cVBYSe-btnType-primary mc-c-iiEeHJ-fcHofs-size-md"
    role="button"
    type="button"
  >
    <span>
      42 is the meaning of life
    </span>
  </button>
</div>
`;

exports[`Button rendering should match the snapshot by size "sm" 1`] = `
<div>
  <button
    class="ButtonUnstyled-root mc-c-iiEeHJ mc-c-iiEeHJ-cVBYSe-btnType-primary mc-c-iiEeHJ-fTTzJN-size-sm"
    role="button"
    type="button"
  >
    <span>
      42 is the meaning of life
    </span>
  </button>
</div>
`;

exports[`Button rendering should match the snapshot by type "danger" 1`] = `
<div>
  <button
    class="ButtonUnstyled-root mc-c-iiEeHJ mc-c-iiEeHJ-bNXcQJ-btnType-danger mc-c-iiEeHJ-fcHofs-size-md"
    role="button"
    type="button"
  >
    <span>
      42 is the meaning of life
    </span>
  </button>
</div>
`;

exports[`Button rendering should match the snapshot by type "primary" 1`] = `
<div>
  <button
    class="ButtonUnstyled-root mc-c-iiEeHJ mc-c-iiEeHJ-cVBYSe-btnType-primary mc-c-iiEeHJ-fcHofs-size-md"
    role="button"
    type="button"
  >
    <span>
      42 is the meaning of life
    </span>
  </button>
</div>
`;

exports[`Button rendering should match the snapshot by type "secondary" 1`] = `
<div>
  <button
    class="ButtonUnstyled-root mc-c-iiEeHJ mc-c-iiEeHJ-TfyyP-btnType-secondary mc-c-iiEeHJ-fcHofs-size-md"
    role="button"
    type="button"
  >
    <span>
      42 is the meaning of life
    </span>
  </button>
</div>
`;

exports[`Button rendering should match the snapshot by type "text" 1`] = `
<div>
  <button
    class="ButtonUnstyled-root mc-c-iiEeHJ mc-c-iiEeHJ-UZJIs-btnType-text mc-c-iiEeHJ-fcHofs-size-md"
    role="button"
    type="button"
  >
    <span>
      42 is the meaning of life
    </span>
  </button>
</div>
`;
